# pyshot

./: pyproject.toml  pyshot.py  setup.py  webscreenshot.js
pyshot/: pyshot.py  webscreenshot.js
